--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
 @media (max-width: 800px){
 	.flex-container {
 		flex-direction: column;
-		margin: auto;
+		margin-left: auto;
+		margin-right: auto;
 		margin-top: 20px;
 	}
 }
