--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ body {
 @media (max-width: 800px){
 	.flex-container {
 		flex-direction: column;
-		margin-left: auto;
-		margin-right: auto;
+		align-items: center;
 		margin-top: 20px;
 	}
 }
