--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
-	font-family: "Perpetua", "Baskerville", "Big Caslon", "Palatino Linotype", "Palatino", serif;
 	background-color: NavajoWhite;
 	color: MidnightBlue;
+	font-family: "Perpetua", "Baskerville", "Big Caslon", "Palatino Linotype", "Palatino", serif;
 }
 
 #titulo {
@@ -22,23 +22,42 @@ select {
 
 @media (max-width: 800px){
 	.flex-container {
-		flex-direction: column;
 		align-items: center;
+		flex-direction: column;
 		margin-top: 20px;
 	}
 }
 
 #img_cao {
+	border-radius: 5px;
 	margin-left: 20px;
 	margin-right: 10px;
 	max-width: 60%;
-	border-radius: 5px;
+	
+}
+
+#c-loader {
+	animation: is-rotating 1s infinite;
+	border: 6px solid #e5e5e5;
+	border-radius: 50%;
+	border-top-color: MidnightBlue;
+	margin-left: 20px;
+	margin-right: 10px;
+	height: 50px;
+	width: 50px;
+}
+
+@keyframes is-rotating {
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 #desc_cao {
+	font-size: 17px;
+	line-height: 1.5;
 	margin-left: 10px;
 	margin-right: 20px;
+	max-width: 90%;
 	text-align: center;
-	line-height: 1.5;
-	font-size: 17px;
 }
